update RaspberryPi readme

--- a/container/RaspberryPi/README
+++ b/container/RaspberryPi/README
@@ -1,3 +1,7 @@
 This code has tested on Raspberry Pi 4 with Ubuntu 20.04. 
 
-
+The reference document can be found:
+'''
+https://forum.linuxfoundation.org/discussion/864693/the-repository-http-apt-kubernetes-io-kubernetes-xenial-release-does-not-have-a-release-file
+https://manjit28.medium.com/installing-kubernetes-cluster-on-ubuntu-20-04-or-raspberry-pi-ubuntu-a7eec0856217
+''' 
